[Merge]Daily improve.

--- a/project.json
+++ b/project.json
@@ -27,6 +27,8 @@
         "src/GameLayers/GameLayerBase.js",
         "src/GameLayers/GameLayerInputBase.js",
 
+        "src/GameLayers/GameLayer_InputTest.js",
+
         "src/GameScenes/GameSceneBase.js",
 
         "src/app.js"
